--- a/flask_application/templates/users.html
+++ b/flask_application/templates/users.html
@@ -10,7 +10,7 @@
     <h1>Users</h1>
     {% for i, user in enumerate(users) %}
       <li>
-        <a href="/users/{{ i }}">
+        <a target="_blank" href="/users/{{ i }}">
           {{ user['name'] }}
         </a>
       </li>
