--- a/flask_application/templates/index.html
+++ b/flask_application/templates/index.html
@@ -5,6 +5,15 @@
   </head>
   <body>
     <h1>Hello World</h1>
+
+    <form action="" method="GET">
+      <input type="text" name="username" />
+      <input type="password" name="password" id="">
+
+      <button type="submit">Submit</button>
+    </form>
+
+
     <div class="something" id="a c">asdfasdf</div>
     <div class="something else" id="b">asdfasdf</div>
     <div id="a"></div>
